--- a/res/xml/device_maintainers_fragment.xml
+++ b/res/xml/device_maintainers_fragment.xml
@@ -147,6 +147,16 @@
                 android:data="https://t.me/Douglas_DG" />
         </Preference>
 
+        <Preference
+            android:id="@+id/device_j7xelte"
+            android:icon="@drawable/havoc_device"
+            android:summary="@string/device_j7xelte_summary"
+            android:title="@string/device_j7xelte" >
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://t.me/notallowedontelegram" />
+        </Preference> 
+
         <Preference 
             android:id="@+id/device_hlte"
             android:icon="@drawable/havoc_device"
